updated index.html page with resume information

--- a/index.html
+++ b/index.html
@@ -7,6 +7,82 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
+  <h1>Toren D. DeRamus | 256.426.1087  |  deramust@gmail.com </h1>
+  <hr>
+  <section id="aboutme">
+     <article>
+      <h3>ABOUT ME</h3>
+      Experienced professional with over 18 years working in the IT profession. Current working experience spans a range of platforms including Server Administration, Network Administration, IT Project Management, IT Service Management, ERP Operations Management, IT Systems Management and Cloud-Computing Operations, with a strong passion for digital transformations of common IT workloads and data-driven systems.
+    </article>
+  </section>
+  <hr>
+  <section id="adsllc">
+    <article>
+      <h3>ADS ENVIRONMENTAL SERVICES | Information Systems Manager | Jan 2019 - Present</h3>
+      <ul>
+        <li>My current role requires me to participate in department budget planning, strategic systems planning, IT project planning and execution, Azure infrastructure design/implementation, Azure cloud operations, security and cost management, disaster recovery and continuity planning, while managing E-Commerce website platforms.</li>
+        <li>I manage a small team of IT staff while leading them to expand their capacity and grow as IT professionals, supporting an SMB of 300 – 350 employees across 29 U.S. locations, 4 sites international.</li>
+        <li>I lead and support IT platforms in traditional Networking, Mobility, Telephony, Cloud Computing with a focus on digital transformation. I successfully transformed aging IT infrastructure and telecommunications to a digital solution improving operational efficiencies while realizing a net 90k + cost savings in each of the first two years of transformation.</li>
+        <li>Through digital transformations of on-premises systems I successfully revived a major company analytics application which realized 300k -500k in annual revenue by providing a more reliable and secure operational cloud environment with Microsoft Azure.</li>
+        <li>I review and manage IT security policies focusing on penetration testing for an Azure Cloud environment, oversee Data Protection and Data Privacy strategy implementations for E-Commerce and customer data collection applications which aides in the attraction and solidification of new contractual agreements.</li>
+        <li>I established and currently manage the IT help desk function for IT operations, efficiently delivering IT services with Zendesk service management tools. Tracking operational metrics that effect business systems and work force efficiency.</li>
+        <li>I converted Deltek ERP Accounting system from an on-premises to cloud-based system eliminating 40% of operational wastes due to aged or failing systems over a 1year period. This digital transformation provided a 75% improvement in system reliability measured by service metrics in the Zendesk ticketing system. This also improved work efficiency by provided a mobile platform to an 80% remote workforce by providing mobile apps compatible with mobile communication devices.</li>
+        <li>Ensure SOX compliance through process adherence and audit support, creating compliance policy for IT operations as we maneuver into a digital workload environment.</li>
+      </ul>    
+    </article>
+  </section>
+
+  <section id="mueller">
+    <article>
+    <h3>MUELLER COMPANY  |  I.T. Service Desk Manager |  May 2014 - Dec - 2019</h3>
+     <ul>
+        <li>Develop and Manage ITSM / ITOM Processes for delivery of IT support services in the following service domains:
+        (Request Fulfillment; Event Mgt.; Change Mgt.; Incident Mgt.; Problem Mgt.; Knowledge Mgt.; Access Mgt.) supporting 3,300 employees globally.</li>
+        <li>Management of IT Service Delivery and Operations resources, which includes the implementation of two service management tools BMC Footprints and Service Now, from procurement to configuration and deployment.</li>
+        <li>Orchestrated a Service Desk schedule for IT staff to support the follow-the-sun support model for a global workforce of 3,300 employees. Staff consists of IT operations,Software Development, and ERP personnel.</li>
+        <li>Develop and manage IT support SLAs to ensure a smooth operation of IT service delivery.</li>
+        <li>Manage IT hardware refresh policy, software applications license compliance, asset acquisitions, asset destruction and removal processes.</li>
+     </ul>
+    </article>
+  </section>
+
+  <section id="mwp">
+   <article>
+    <h3>MUELLER COMPANY  |   LAN Admistrator III  | May 2011 - May 2014</h3>
+      <ul>
+          <li> Management of IT Department staff availability and scheduling to support a production plant of 400 + employees covering three shifts.</li>
+           <li>Responsible for implementing and managing an inventory management system (DSI), providing digital transformation of inventory workloads across 10 production plants to operate  on a meshed domain network.</li>
+           <li>Successfully converted individual production plants to one unified domain to operate as a unified entity for sharing resources and improve operating efficiency. Conversion was done with internal IT staff saving a net $400k quoted by the original implementation team.</li>
+           <li>Successfully implemented and managed the IT operations for $4M robotics production line, integrating production equipment with ERP systems and PLC functionalities, converged in a virtual ecosystem.</li>
+           <li>Successfully transformed on premise workloads to a virtual environment running VMware vSphere 4 and vSphere 5 on an ESXI platform to provide stability and continuity in a production operations technology infrastructure, building the blueprint for implementation across 10 production plants.</li>
+           <li>Mange vendor and contractor support resources for maintaining facility security, power, and network backbone cabling.</li>
+           <li>Asset management and licensing compliance. Maintaining current assets through refresh policies while organizing a system of tracking software licensing with partners such as Dell and Microsoft.</li>
+         <li>Management IT department budget forecasting and allocation of funds to support IT operations according to the overall business objectives.</li>
+         <li>Management of data storage and recovery resources to prevent data loss and add continuity.</li>
+         <li>Management of electronic communications usage policies to govern electronic use of a global workforce.</li>
+         <li>Successfully completed Six Sigma Process improvement projects where IT systems were used to enhance production line results.</li>
+       </ul>
+    </article>
+  </section>
+
+  <section id="muelalb">
+    <article>
+    <h3>MUELLER COMPANY  |  Programmer Operations and Technical Support  | May 2011 - May 2014</h3> 
+      <ul>
+        <li>Experience with administration of Microsoft products and Operating Systems: i.e. Microsoft Office Suites, Windows XP, Vista, Windows 7, Windows 10, and Server ’03 / ’08 / ’12 / ‘16.</li>
+        <li>Experience in LAN infrastructure design, and WAN support in Frame Relay and MPLS. Knowledge and experience using Routed Protocols: TCP/IP, IPX/SPX, and AppleTalk; and Routing Protocols: RIPv2, IGRP, EIGRP, and OSPF.</li>
+        <li>Experience with implementation and administration of Domain Controllers and Active Directory on a Windows Server Platform.</li>
+        <li>Experience in designing hierarchical network structures and assignments of subnetworks over various physical media,
+          i.e. Ethernet, Wireless, and Fiber. Experience in programming layer 2 and layer 3 network communication devices.</li>
+        <li>Experience providing network connectivity administration of routers and switches, and performing troubleshooting tasks for connectivity, speed, and packet loss issues.</li>
+         <li>Advanced Router/Switch knowledge such as managing and configuring boot image files, creating and configuring VLANS, and writing Access Control Lists for security purposes.</li>
+         <li>Experience in implementation and administration of security measures falling in line with the 10 domains of Information Security. Including but not limited to firewall implementation, internet content filtering (SonicWall / Cisco platform), Wireless Security, Active Directory and Group Policy security structuring, VPN administration, physical security and DR.</li>
+         <li>Experience in administration of digital telecommunications switch and phone system which provides access for a 2000+ user environment (i.e. Avaya / Definity and Shortel Communications).</li>
+         <li>Experience in implementation and administration of database management system.</li>
+      </ul>
+    </article>
+  </section>
   
   <script src="main.js"></script>
 </body>
