updated css border styles for articles

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
 
   <h1>Toren D. DeRamus | 256.426.1087  |  deramust@gmail.com </h1>
-  <hr>
-  <section id="aboutme">
-     <article>
+  
+  <article id="aboutme">
+     <section >
       <h3>ABOUT ME</h3>
       Experienced professional with over 18 years working in the IT profession. Current working experience spans a range of platforms including Server Administration, Network Administration, IT Project Management, IT Service Management, ERP Operations Management, IT Systems Management and Cloud-Computing Operations, with a strong passion for digital transformations of common IT workloads and data-driven systems.
-    </article>
-  </section>
-  <hr>
-  <section id="adsllc">
-    <article>
+    </section>
+  </article>
+  
+  <article id="adsllc">
+    <section>
       <h3>ADS ENVIRONMENTAL SERVICES | Information Systems Manager | Jan 2019 - Present</h3>
       <ul>
         <li>My current role requires me to participate in department budget planning, strategic systems planning, IT project planning and execution, Azure infrastructure design/implementation, Azure cloud operations, security and cost management, disaster recovery and continuity planning, while managing E-Commerce website platforms.</li>
@@ -30,11 +30,11 @@
         <li>I converted Deltek ERP Accounting system from an on-premises to cloud-based system eliminating 40% of operational wastes due to aged or failing systems over a 1year period. This digital transformation provided a 75% improvement in system reliability measured by service metrics in the Zendesk ticketing system. This also improved work efficiency by provided a mobile platform to an 80% remote workforce by providing mobile apps compatible with mobile communication devices.</li>
         <li>Ensure SOX compliance through process adherence and audit support, creating compliance policy for IT operations as we maneuver into a digital workload environment.</li>
       </ul>    
-    </article>
-  </section>
+    </section>
+  </article>
 
-  <section id="mueller">
-    <article>
+  <article id="mueller">
+    <section>
     <h3>MUELLER COMPANY  |  I.T. Service Desk Manager |  May 2014 - Dec - 2019</h3>
      <ul>
         <li>Develop and Manage ITSM / ITOM Processes for delivery of IT support services in the following service domains:
@@ -44,11 +44,11 @@
         <li>Develop and manage IT support SLAs to ensure a smooth operation of IT service delivery.</li>
         <li>Manage IT hardware refresh policy, software applications license compliance, asset acquisitions, asset destruction and removal processes.</li>
      </ul>
-    </article>
-  </section>
+    </section>
+  </article>
 
-  <section id="mwp">
-   <article>
+  <article id="mwp">
+   <section>
     <h3>MUELLER COMPANY  |   LAN Admistrator III  | May 2011 - May 2014</h3>
       <ul>
           <li> Management of IT Department staff availability and scheduling to support a production plant of 400 + employees covering three shifts.</li>
@@ -63,11 +63,11 @@
          <li>Management of electronic communications usage policies to govern electronic use of a global workforce.</li>
          <li>Successfully completed Six Sigma Process improvement projects where IT systems were used to enhance production line results.</li>
        </ul>
-    </article>
-  </section>
+    </section>
+  </article>
 
-  <section id="muelalb">
-    <article>
+  <article id="muelalb">
+    <section>
     <h3>MUELLER COMPANY  |  Programmer Operations and Technical Support  | May 2011 - May 2014</h3> 
       <ul>
         <li>Experience with administration of Microsoft products and Operating Systems: i.e. Microsoft Office Suites, Windows XP, Vista, Windows 7, Windows 10, and Server ’03 / ’08 / ’12 / ‘16.</li>
@@ -81,8 +81,8 @@
          <li>Experience in administration of digital telecommunications switch and phone system which provides access for a 2000+ user environment (i.e. Avaya / Definity and Shortel Communications).</li>
          <li>Experience in implementation and administration of database management system.</li>
       </ul>
-    </article>
-  </section>
+    </section>
+  </article>
   
   <script src="main.js"></script>
 </body>
